# MiniLAX

./: .gitignore  .project  MiniLAX.cabal  mini
.dist-buildwrapper/: .Setup.hs.bwinfo  MiniLAX.cabal
.dist-buildwrapper/cabal-dev/: cabal.config
.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage  Main.hs
examples/: err1.lax  ex1.lax  ex2.lax  ex3.lax  ex3.lax~  lift1.lax  lift2.lax
src/: Main.hs
src/MiniLAX/: AST.hs  Compiler.hs  Diagnostic.hs  IR.hs  Location.hs  Options.hs  Parsing.hs  Printer.hs  Static.hs
src/MiniLAX/AST/: Annotated.hs  Expr.hs  PrettyPrint.hs  Printer.hs  Util.hs
src/MiniLAX/Backend/JVM/: CodeGen.hs  Skeleton.hs  Type.hs
src/MiniLAX/IR/: CodeGen.hs  Generate.hs
src/MiniLAX/Parsing/: .gitignore  Lexer.x  Lexer2.x  LexerCore.hs  LexerDef.hs  Parser.y  Parser2.y  ParserCore.hs  Printer.hs  TokenPrinter.hs
src/MiniLAX/Static/: Closures.hs  Env.hs  Resolver.hs  Symbols.hs  TypeCheck.hs  Types.hs
src/MiniLAX/Util/: AttrMap.hs  Flag.hs  LabelGen.hs
tests/: Test.hs
tests/MiniLAX/Parsing/: LexerTest.hs
tests/MiniLAX/Static/: ClosuresTest.hs
