name:           mlax
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         los

executable mlax
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   bytestring,
                   array,
                   containers,
                   mtl,
                   transformers
  ghc-options:     -Wall
  other-modules:   
                   MiniLAX.AST,
                   MiniLAX.Location,
                   MiniLAX.Options,
                   MiniLAX.Printer,
                   MiniLAX.Backend.JVM.Skeleton,
                   MiniLAX.Diagnostic,
                   MiniLAX.Static.Symbols,
                   MiniLAX.Static.Types,
                   MiniLAX.Compiler,
                   MiniLAX.Parsing.LexerCore

test-suite Test
  type:            exitcode-stdio-1.0
  main-is:         Test.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base >= 4, HTF > 0.9,
                   HUnit,
                   containers,
                   mtl,
                   transformers,
                   dlist
  other-modules:   
                  MiniLAX.Parsing.LexerTest,
                  MiniLAX.AST,
                  MiniLAX.Location,
                  MiniLAX.Options,
                  MiniLAX.Printer,
                  MiniLAX.Backend.JVM.Skeleton,
                  MiniLAX.Diagnostic,
                  MiniLAX.TreeDecoration,
                  MiniLAX.Static.Symbols,
                  MiniLAX.Static.Types,
                  MiniLAX.Compiler,
                  MiniLAX.Parsing.LexerCore
  hs-source-dirs:  
                  tests,
                  src

