name:           mlax
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         los

executable mlax
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   bytestring,
                   array,
                   containers,
                   mtl,
                   transformers,
                   HList
  ghc-options:     -Wall
  other-modules:   
                   MiniLAX.AST,
                   MiniLAX.AST.Annotated,
                   MiniLAX.AST.PrettyPrint,
                   MiniLAX.AST.Util,
                   MiniLAX.Backend.JVM.CodeGen,
                   MiniLAX.Backend.JVM.Skeleton,
                   MiniLAX.Compiler,
                   MiniLAX.Diagnostic,
                   MiniLAX.IR,
                   MiniLAX.Location,
                   MiniLAX.Options,
                   MiniLAX.Parsing.Lexer,
                   MiniLAX.Parsing.LexerCore,
                   MiniLAX.Parsing.Parser2,
                   MiniLAX.Parsing.ParserCore,
                   MiniLAX.Printer,
                   MiniLAX.Static,
                   MiniLAX.Static.Closures,
                   MiniLAX.Static.Env,
                   MiniLAX.Static.Symbols,
                   MiniLAX.Static.TypeCheck,
                   MiniLAX.Static.Types,
                   MiniLAX.Util.LabelGen,
                   MiniLAX.IR.Generate,
                   MiniLAX.Util.AttrMap,
                   MiniLAX.Util.Flag,
                   MiniLAX.IR.CodeGen

test-suite Test
  type:            exitcode-stdio-1.0
  main-is:         Test.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base >= 4, HTF > 0.9,
                   HUnit,
                   containers,
                   mtl,
                   transformers,
                   dlist
  other-modules:   
                  MiniLAX.AST,
                  MiniLAX.AST.Annotated,
                  MiniLAX.AST.PrettyPrint,
                  MiniLAX.AST.Util,
                  MiniLAX.Backend.JVM.CodeGen,
                  MiniLAX.Backend.JVM.Skeleton,
                  MiniLAX.Compiler,
                  MiniLAX.Diagnostic,
                  MiniLAX.IR,
                  MiniLAX.Location,
                  MiniLAX.Options,
                  MiniLAX.Parsing.Lexer,
                  MiniLAX.Parsing.LexerCore,
                  MiniLAX.Parsing.LexerTest,
                  MiniLAX.Parsing.Parser2,
                  MiniLAX.Parsing.ParserCore,
                  MiniLAX.Printer,
                  MiniLAX.Static,
                  MiniLAX.Static.Closures,
                  MiniLAX.Static.ClosuresTest,
                  MiniLAX.Static.Env,
                  MiniLAX.Static.Symbols,
                  MiniLAX.Static.TypeCheck,
                  MiniLAX.Static.Types,
                  MiniLAX.Util.LabelGen,
                  MiniLAX.IR.Generate,
                  MiniLAX.Util.AttrMap,
                  MiniLAX.Util.Flag,
                  MiniLAX.IR.CodeGen
  hs-source-dirs:  
                  tests,
                  src

